--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
   <body>
     <p>Hello there </p>
     <p> alright this is coding good so far</p>
-    <h1> My main page </h1>
+    <h1> My main page </h1> 
+    <h2> This in the heading for my other content</h2>
+    <a href="BAs-work.html"><img src="images/BA1.jpeg" width="150"/></body></a>
+    <img src="images/BA2.jpeg" height="100">
+    <img src="images/BA3.jpeg" width="80">
+    <a href="http://www.googlecom" >click here for Google</a>
+    <a href="http:wwww.itvarsty.rg" > click here to IT varsity</a>
+    <a href="about.html" > click for about us </a>
   </body>  
  </head>   
 </html>
