--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head> 
+    <link rel="styleshet" href="style.css" >
   <body>
     <p>Hello there </p>
     <p> alright this is coding good so far</p>
