--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
     <a href="http://www.googlecom" >click here for Google</a>
     <a href="http:wwww.itvarsty.rg" > click here to IT varsity</a>
     <a href="about.html" > click for about us </a>
+
+<a href="index.html">Home</a>
+<a href="#">About</a>
+<a href="#">Contact</a>
+
+
+<div id="menu-bar">
+<a href="index.html">Home</a>
+<a href="#">About</a>
+<a href="#">Contact</a>
+</div >
+
+
   </body>  
  </head>   
 </html>
