--- a/list.html
+++ b/list.html
@@ -21,6 +21,8 @@
     <li>Documentation and Reporting</li>
     <li> Management and Continuous Improvement</li>
 </lo>
-
+ul{
+list-style-image: url('images/pointerjpeg');
+}
 </body>
 </html>
