--- a/Patricia.html
+++ b/Patricia.html
@@ -8,6 +8,29 @@
        <img src="images/pat.png" />
 
 </div>
+
+<h4>Bio</h4>
+<p>Full Name: Patricia Self</p>
+<p>Place Of Birth: SA</p>
+<p>Alignment: Good</p>
+<p>Gender: Female</p>
+<p>Race: mixed </p>
+<br/>
+<h4>Power Stats</h4>
+<p>Intelligence: 90%</p>
+<p>Strength: 100%</p>
+<p>Speed: 40%</p>
+<p>Durability: 100%</p>
+<p>Power: 100%</p>
+<p>Combat: 0%</p>
+</body>
+
+
+
+
+
+
+
 </body>
 
 </html>
