--- a/BAs.html
+++ b/BAs.html
@@ -9,7 +9,7 @@
        <img src="images/BA2.jpeg"/>
        <img src="images/BA3.jpeg"/>
        <img src="images/IMG_3172.jpeg"/>
-       <img src="images/pat.png"/>
+       <a href="Patricia.html"><img src="images/pat.png"/></a>
 
 </div>
 </body>
