--- a/Clementian.html
+++ b/Clementian.html
@@ -5,32 +5,26 @@
 <body>
 <h2>PatriciaSelf</h2>
 <div class="gallary">
-       <img src="images/pat.png" />
+       <img src="images/Clementian.jpeg" />
 
 </div>
 
 <h4>Bio</h4>
-<p><b>Full Name</b> : Patricia Self</p>
-<p><b>Of Birth</b>: kenya</p>
+<p><b>Full Name</b> : Clementian Doctor</p>
+<p><b>Of Birth</b>: </Cape-Town></p>
 <p><b>Alignment<b></b>: Good</p>
 <p><b>Gender </b>: Female</p>
-<p><b>Race</b>: mixed </p>
+<p><b>Race</b>: Robot </p>
 <br/>
 <h4><b>Power Stats </b></h4>
 <p><b>Intelligence </b>: 90%</p>
-<p><b>Strength</b>: 100%</p>
+<p><b>Strength</b>: 40%</p>
 <p><b>Speed</b> : 40%</p>
-<p><b>Durability</b> : 100%</p>
-<p><b> Power : </b>100%</p>
-<p><b>Combat</b> 10%</p>
+<p><b>Durability</b> : 30%</p>
+<p><b> Power : </b>00%</p>
+<p><b>Combat</b> 100%</p>
 </body>
 
 
-
-
-
-
-
-</body>
 
 </html>
