--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
 <a href="#">About</a>
 <a href="#">Contact</a>
 </div >
+<div class="gallery">
+<a href="Jacob.html"><img src="images/Jacob.jpeg"/></a>
+<a href="Bernice.html"><img src="images/Bernice.jpeg"/></a>
+<a href="Clementian.html"><img src="images/Clementian.jpeg"/></a>
+<a href="Wisdom.html"><img src="images/Wisdom.jpeg"/></a>
+<a href="Emmanual.html"><img src="images/Emmaual.jpeg"/></a>
+<a href="Anna.html"><img src="images/Anna.jpeg"/></a>
+</div>
+
 
 
   </body>  
