--- a/Anna.html
+++ b/Anna.html
@@ -11,7 +11,7 @@
 
 <h4>Bio</h4>
 <p><b>Full Name</b> : Anna Heaven</p>
-<p><b>Of Birth</b>: East-West</p>
+<p><b>Place Of Birth</b>: East-West</p>
 <p><b>Alignment<b></b>: Good</p>
 <p><b>Gender </b>: Female</p>
 <p><b>Race</b>: white</p>
