--- a/Bernice.html
+++ b/Bernice.html
@@ -11,7 +11,7 @@
 
 <h4>Bio</h4>
 <p><b>Full Name</b> : Bernice Shapo</p>
-<p><b>Of Birth</b>: Lesotho</p>
+<p><b>Place Of Birth</b>: Lesotho</p>
 <p><b>Alignment<b></b>: Good</p>
 <p><b>Gender </b>: Female</p>
 <p><b>Race</b>: black </p>
