--- a/Clementian.html
+++ b/Clementian.html
@@ -3,7 +3,7 @@
 <head>    <link rel="styleshet" href="style.css" >
 </head>
 <body>
-<h2>PatriciaSelf</h2>
+<h2>Clementian</h2>
 <div class="gallary">
        <img src="images/Clementian.jpeg" />
 
@@ -11,7 +11,7 @@
 
 <h4>Bio</h4>
 <p><b>Full Name</b> : Clementian Doctor</p>
-<p><b>Of Birth</b>: </Cape-Town></p>
+<p><b>Place Of Birth</b>: </Cape-Town></p>
 <p><b>Alignment<b></b>: Good</p>
 <p><b>Gender </b>: Female</p>
 <p><b>Race</b>: Robot </p>
