--- a/BAs.html
+++ b/BAs.html
@@ -3,15 +3,27 @@
 <head>    <link rel="styleshet" href="style.css" >
 </head>
 <body>
-<h2>PatriciaSelf</h2>
+
+<div id="menu">
+<a href="#">Home</a>
+<a href="#">About Us</a>
+<a href="#">Contact</a>
+</div>
+
 <div class="gallary">
-       <img src="images/BA2.jpeg" />
-       <img src="images/BA2.jpeg"/>
-       <img src="images/BA3.jpeg"/>
-       <img src="images/IMG_3172.jpeg"/>
+       <img src="images/Emmaual.jpeg" />
+       <img src="images/Bernice.jpeg"/>
+       <img src="images/Wisdom.jpeg"/>
+       <img src="images/Anna.jpeg"/>
+       <img src="images/Clementian.jpeg"/>
+       <img src="images/Jacob.jpeg"/>
        <a href="Patricia.html"><img src="images/pat.png"/></a>
 
 </div>
+
+
+
+
 </body>
 
 </html>
