--- a/BAs.html
+++ b/BAs.html
@@ -7,7 +7,7 @@
 <div id="menu">
 <a href="#">Home</a>
 <a href="#">About Us</a>
-<a href="#">Contact</a>
+<a href="#">Contact us </a>
 </div>
 
 <div class="gallary">
