--- a/contact-us.html
+++ b/contact-us.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-    <head>
-    <body>
-    <h2> Contact us </h2>
-    <p>Welcome  Again </p>
-    <a href="index.html" > click here for home page </a>
-    </body>
-    </head>
+<head>
+     <link rel="styleshet" href="style.css"
+</head>
+<body>
+<h2>contact us</h2>
+<p>098 765 543 </p>
+</body>
 </html>
