--- a/Bernice.html
+++ b/Bernice.html
@@ -3,6 +3,18 @@
 <head>    <link rel="styleshet" href="style.css" >
 </head>
 <body>
+    !DOCTYPE <html>
+<html>
+<head>    <link rel="styleshet" href="style.css" >
+</head>
+<body>
+
+<div id="menu">
+<a href="index.html">Home</a>
+<a href="about.html">About Us</a>
+<a href="contact-us.html">Contact us </a>
+</div>
+
 <h2>Bernice</h2>
 <div class="gallary">
        <img src="images/Bernice.jpeg" />
