--- a/index.html
+++ b/index.html
@@ -1,30 +1,29 @@
-<!DOCTYPE html>
+!DOCTYPE <html>
 <html>
- <head> 
-    <link rel="styleshet" href="style.css" >
-  <body>
-    <p>Hello there </p>
-    <p> alright this is coding good so far</p>
-    <h1> My main page </h1> 
-    <h2> This in the heading for my other content</h2>
-    <a href="BAs-work.html"><img src="images/BA1.jpeg" width="150"/></body></a>
-    <img src="images/BA2.jpeg" height="100">
-    <img src="images/BA3.jpeg" width="80">
-    <a href="http://www.googlecom" >click here for Google</a>
-    <a href="http:wwww.itvarsty.rg" > click here to IT varsity</a>
-    <a href="about.html" > click for about us </a>
+<head>    <link rel="styleshet" href="style.css" >
+</head>
+<body>
 
+<div id="menu">
 <a href="index.html">Home</a>
-<a href="#">About</a>
-<a href="#">Contact</a>
+<a href="about.html">About Us</a>
+<a href="contact-us.html">Contact us </a>
+</div>
+
+<div class="gallary">
+       <img src="images/Emmaual.jpeg" />
+       <img src="images/Bernice.jpeg"/>
+       <img src="images/Wisdom.jpeg"/>
+       <img src="images/Anna.jpeg"/>
+       <img src="images/Clementian.jpeg"/>
+       <img src="images/Jacob.jpeg"/>
+       <a href="Patricia.html"><img src="images/pat.png"/></a>
+
+</div>
 
 
-<div id="menu-bar">
-<a href="index.html">Home</a>
-<a href="#">About</a>
-<a href="#">Contact</a>
-</div >
 
- </body>  
- </head>   
+
+</body>
+
 </html>
