move index.html to docs folder

--- a/contact-us.html
+++ b/contact-us.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-     <link rel="styleshet" href="style.css"
+<head>    <link rel="styleshet" href="style.css" >
 </head>
+
 <body>
 <h2>contact us</h2>
 <p>098 765 543 </p>
+
 </body>
 </html>
