--- a/list.html
+++ b/list.html
@@ -21,8 +21,8 @@
     <li>Documentation and Reporting</li>
     <li> Management and Continuous Improvement</li>
 </lo>
-ul{
-list-style-image: url('images/pointerjpeg');
-}
+
+<ul>{list-style-image: url('images/pointer.jpeg');}</ul>
+
 </body>
 </html>
