--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
-!DOCTYPE <html>
-<html>
-<head>    <link rel="styleshet" href="style.css" >
-</head>
-<body>
-
+<!DOCTYPE html>
 <div id="menu">
 <a href="index.html">Home</a>
 <a href="about.html">About Us</a>
